# tacoshell

./: .gitignore  LICENSE  README.md  pyproject.toml
art/: stable-diffusion-prompts.md
tacoshell/: app.py  config.py
tacoshell/core/: ai.py  context_manager.py  db.py  shell.py
tacoshell/shell/: ai.py  shell.py
