[tool.poetry]
name = "tacoshell"
version = "0.1.0"
description = ""
authors = ["harmonichemispheres <robby.boney@harmonichemispheres.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
openai = "^0.27.2"
typer = "^0.7.0"
pydantic = "^1.10.7"
rich = "^13.3.3"
toml = "^0.10.2"
duckdb = "^0.7.1"
numpy = "^1.24.2"
pandas = "^1.5.3"
prompt-toolkit = "^3.0.38"
openpyxl = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
taco = 'tacoshell.app:main'